--- a/DoStuffApp/MainWindow.xaml
+++ b/DoStuffApp/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="button1"
+                Content="Button"
+                HorizontalAlignment="Left"
+                Margin="10,10,0,0"
+                VerticalAlignment="Top"
+                Width="75"
+                Click="Button1_Click" />
+
     </Grid>
 </Window>
